--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,30 @@
 # main links links
 main:
+
+  - title: "About"
+    url: /about/
+
+  - title: "CV"
+    url: /cv/
+
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+#  - title: "Talks"
+#    url: /talks/
 
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
-  - title: "CV"
-    url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
+#  - title: "Teaching"
+#    url: /teaching/
+
+  - title: "Projects"
+    url: /projects/
+
+
+  - title: "Contact"
+    url: /contact/
+
+#  - title: "Blog Posts"
+#    url: /year-archive/
+
+#  - title: "Guide"
+#    url: /markdown/
