--- a/_config.yml
+++ b/_config.yml
@@ -82,12 +82,12 @@ analytics:
 author:
   name             : "Hannah Sheahan"
   avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
+  bio              : "Engineer/Psychologist/Computational Neuroscientist.\nI work on trying to understand principles of learning in humans and artificial agents"
   location         : "Oxford/London, UK"
   employer         : "University of Oxford"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=tM4sf80AAAAJ&view_op=list_works"
-  email            : "sheahan.hannah@gmail.com"
+  email            : #"sheahan.hannah@gmail.com"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
