--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 # main links links
 main:
 
-  - title: "About"
-    url: /about/
+  - title: "Research"
+    url: /research/
 
   - title: "CV"
     url: /cv/
