--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,8 +20,8 @@ main:
     url: /projects/
 
 
-  - title: "Contact"
-    url: /contact/
+#  - title: "Contact"
+#    url: /contact/
 
 #  - title: "Blog Posts"
 #    url: /year-archive/
