--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : https://www.linkedin.com/in/hannah-sheahan-5736086a/
+  linkedin         : #https://www.linkedin.com/in/hannah-sheahan-5736086a/
   orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
