--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Hannah Sheahan"
   avatar           : "profile.png"
-  bio              : "Engineer/Psychologist/ Computational Neuro. I try to understand how humans and artificial agents learn simple concepts"
+  bio              : "Engineer/Psychologist/ Computational Neuro."
   location         : "Oxford/London, UK"
   employer         : "University of Oxford"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
