--- a/_config.yml
+++ b/_config.yml
@@ -82,12 +82,12 @@ analytics:
 author:
   name             : "Hannah Sheahan"
   avatar           : "profile.png"
-  bio              : "Engineer/Psychologist/ Computational Neuro."
-  location         : "Oxford/London, UK"
-  employer         : "University of Oxford"
+  bio              : "AI Researcher/Engineer/Cognitive Scientist"
+  location         : "London, UK"
+  employer         : "Google DeepMind"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=tM4sf80AAAAJ&view_op=list_works"
-  email            : #"sheahan.hannah@gmail.com"
+  email            : #"hsheahan@deepmind.com"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
